package behavioral.observer.ca2;

public interface ButtonListener {
  public void onClick();
}
